# auralogger-python

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
auralogger/: __init__.py  aura_log.py  backend_origin.py  cli.py  cli_auth.py  cli_load_env.py  get_logs.py  get_logs_filters.py  log.py  log_print.py  proj_auth.py
auralogger/cli/: __init__.py  aside_pools.py  cli.py  cli_auth.py  cli_load_env.py  cli_personality_state.py  cli_style.py  cli_tone.py  get_logs.py  get_logs_filters.py  log_print.py  log_styles.py
auralogger/cli/commands/: client_check.py  get_logs_cmd.py  init.py  server_check.py  test_clientlog.py  test_log.py  test_serverlog.py
auralogger/client/: __init__.py  client_log.py
auralogger/commands/: client_check.py  get_logs_cmd.py  init.py  server_check.py  test_clientlog.py  test_serverlog.py
auralogger/server/: __init__.py  aura_log.py  proj_auth.py
auralogger/utils/: __init__.py  backend_origin.py  env_config.py  http_utils.py  parser.py  recovery_messages.py
dev-docs/: README.md  feature-flows.md  file-map.md  routes.md
tests/: smoke_aura_log.py  test_cli_load_env.py  test_cli_parity_updates.py  test_cli_unknown_command.py  test_client_sdk.py  test_configure_session.py  test_get_logs_filters.py  test_public_api_names.py  test_wire_contract.py  test_ws_logger_suppression.py
user-docs/: commands.md  environment.md
