[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auralogger"
version = "0.1.10"
description = "Open-Source Developer package repository for AuraLogger, a real-time logging and observability SDK and CLI for streaming, storing, searching, and filtering application logs—beautifully visualized and accessible anywhere in the world across terminal, web, and any screen."
readme = "README.md"
license = "ISC"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
  { name = "Bhanu Vardhan Reddy Nanavala" },
]
keywords = ["auralogger", "cli", "logging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging",
]
dependencies = [
  "python-dotenv>=1.0.0",
  "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://auralogger.com"
Documentation = "https://auralogger.com/docs"

[project.scripts]
auralogger = "auralogger.cli.cli:_entrypoint"

[tool.setuptools.packages.find]
where = ["."]
include = ["auralogger*"]
